"""Compilation Database hook.

See the README file for more information.
"""

module(
    name = "tsdb2_comp_db_hook",
    version = "0.1.0",
    repo_name = "com_tsdb2_comp_db_hook",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0.bcr.2",
    repo_name = "com_google_absl",
)

http_archive(
    name = "com_tsdb2_platform",
    url = "https://github.com/tsdb2/platform/archive/refs/tags/v0.0.5.tar.gz",
    sha256 = "39aa487d8b9137b705a2ca54fde1a91cc26d256e7258888601001778928378d8",
    strip_prefix = "platform-0.0.5",
)
